# VirtualClub

./: .gitignore  README.md  VirtualClub.spec  main.py  pyproject.toml  setup.py
.github/workflows/: trampolining.yaml
lib/: libbivfs.py  rpa_reader.py  rpyc_reader.py
libbivfs/: CMakeLists.txt
libbivfs/src/: module.cpp
patches/p/: 999vboxmgr.rpy  999vboxmgr.rpyc  playtime_tracker.rpy  playtime_tracker.rpyc  sprite_preview.rpy  sprite_preview.rpyc
